examples/errors/return_type_mismatch_method/main.hd
struct Flag {
    active: bool,

    fn get(self: Self): int {
        return self.active;
    }
}

fn main(): int {
    let f = Flag { active: true };
    return f.get();
}
